# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test-linter-check.yml
gendiff/: __init__.py  cli.py  constants.py  diff_finder.py  diff_generator.py  file_reader.py  gendiff.py  parser.py  plain.py  stylish.py  token.py  transformator.py
gendiff/formaters/: __init__.py  jsonlish.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
gendiff/templates/: __init__.py  jsonlish.py  plain.py  stylish.py
tests/: gendiff_test.py
tests/fixtures/: expect_json.txt  expect_json1.txt  expect_jsonlish0.txt  expect_plain.txt  expect_plain1.txt  expect_yaml.txt  expect_yaml1.txt  expect_yaml2.txt  expectation.txt  test1file1.yml  test1file2.json  test1file2.yml  test2file1.json  test2file1.yml  test2file2.json  test2file2.yml  test3file1.json  test3file1.yml  test3file2.json  testplain1file1.json  testplain1file2.json
