[tool.poetry]
name = "hexlet-code"
version = "0.0.1"
description = "second hexlet project"
authors = ["twistby <pref@outlook.com>"]
packages = [
   { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"